--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
 .second-half-rated1st, .second-half-rated2nd, .second-half-rated3rd {
   padding-right: 40px;
   font-size: .9rem;
+  color: var(--very-dark-magenta);
 }
 
 .second-half-staricons {
@@ -126,7 +127,7 @@ body {
   display: -ms-grid;
   display: grid;
   margin: 0;
-  margin-top: 100px;
+  margin-top: 80px;
   -ms-grid-columns: (auto)[3];
       grid-template-columns: repeat(3, auto);
   -webkit-box-pack: justify;
